test/files/neg/sammy_expected.check
sammy_expected.scala:4: error: type mismatch;
 found   : String => Int
 required: F[Object,Int]
  def wrong: F[Object, Int] = (x: String) => 1
                                          ^
one error found
